# hwi-bindings

apps/android/app/src/androidTest/java/org/rustyapps/calculator/: ExampleInstrumentedTest.kt
apps/android/app/src/test/java/org/rustyapps/calculator/: ExampleUnitTest.kt
ffi/: Cargo.toml  build.rs  uniffi.toml
ffi/src/: hwi.udl  lib.rs
